# ai-agent-api-sample

./: .claudeignore  .env.example  .gitignore  README.md  docker-compose.yml  init-db.sql  pyproject.toml
docs/: api-spec.md  implementation-plan.md  setup.md
src/: auth.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py
src/api/: documents.py  health.py  query.py
src/rag/: chain.py  embeddings.py  llm.py  vector_store.py
