[project]
name = "rag-backend"
version = "0.1.0"
description = "RAG API with LangChain, LangGraph, and PostgreSQL pgvector"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "uvicorn>=0.32.0",
    "langchain>=1.0.2",
    "langgraph>=1.0.1",
    "langchain-google-genai>=3.0.0",
    "langchain-openai>=0.3.0",
    "langchain-postgres>=0.0.15",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.3.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
]
